# AI-agents

./: README.md
weather_crewai/: .env  README.md  pyproject.toml
weather_crewai/src/: crew.py  main.py
weather_crewai/src/config/: tasks.yaml
weather_crewai/src/weather_crewai/: crew.py  main.py
weather_crewai/src/weather_crewai/config/: agents.yaml  tasks.yaml
