[project]
name = "weather_crewai"
version = "0.1.0"
description = "weather_crewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.1"
]

[project.scripts]
weather_crewai = "weather_crewai.main:run"
run_crew = "weather_crewai.main:run"
train = "weather_crewai.main:train"
replay = "weather_crewai.main:replay"
test = "weather_crewai.main:test"
run_with_trigger = "weather_crewai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
